# Elevator

./: .gitignore  .gitmodules  README.md  Review.md  tilbakmeld_fat_netdontwork.txt
code_project_hand_in_dir/: changes_made_between_versions_for_kristian.txt
code_project_hand_in_dir/code_project_handin_current_final/: README_code_overview.txt
code_project_hand_in_dir/code_project_handin_current_final/src/: network_communication.rs
code_project_hand_in_dir/code_project_handin_current_old_final/src/: brain.rs  elevator_interface.rs  main.rs
code_project_hand_in_dir/code_project_handin_with_if_statement/src/: network_communication.rs
code_project_hand_in_dir/code_project_handin_without_if_statement/: Cargo.toml
code_project_hand_in_dir/code_project_handin_without_if_statement/src/: main.rs  network_communication.rs
code_snapshot_hand_in_folder_to_zip/src/: brain.rs
exercises/Exercise1-master/: questions.md  result.md
exercises/Exercise2-master/ex2_onlab_testing/: Cargo.toml
exercises/Exercise2-master/exercise2_tcp/: Cargo.toml
exercises/Exercise2-master/exercise2_udp/: Cargo.toml
exercises/Exercise4-master/: .ex4_program_a.sh.swp  ex4_program_a.sh  ex4_program_b.sh  ex4_program_c.sh  testing_bash.sh
exercises/Exercise5-master/: README.md
exercises/Exercise5-master/semaphore/: semaphore.d
project/Project-master/: PDD-26.md  Project_Description_Abriviation.md  ex3_system_analazys.txt
project/given-Simulator-v2-master/: simulator.con
project/peer_review/: 337eedef_our_tilbakemelding.txt
project/peer_review_code_hasshed/: peer-review-26.txt
(+104 files in other folders)
